--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>OmniFlix Media-Node Uptime Tracker</title>
-    <meta name="description" content="Monitor OmniFlix media-node uptime with live percentages, status bricks, and historical checks." />
-    <meta name="author" content="Lovable" />
+    <meta name="description" content="Monitor OmniFlix media-node uptime tracker dashboard to monitor uptime and reliability." />
+    <meta name="author" content="Daksha" />
 
-    <meta property="og:title" content="OmniFlix Media-Node Uptime Tracker" />
-    <meta property="og:description" content="Modern dashboard to track OmniFlix media-node uptime and reliability." />
+    <meta property="og:title" content="OmniFlix Media-Node Uptime Tracker by Daksha" />
+    <meta property="og:description" content="Uptime dashboard to track OmniFlix media-node performance and reliability." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://media-node-uptime.dakshavalidator.in/dakshavalidator.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@dakshavalidator" />
+    <meta name="twitter:image" content="https://media-node-uptime.dakshavalidator.in/dakshavalidator.png" />
     <link rel="canonical" href="/" />
   </head>
 
