--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <meta property="og:title" content="OmniFlix Media-Node Uptime Tracker by Daksha" />
     <meta property="og:description" content="Uptime dashboard to track OmniFlix media-node performance and reliability." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://media-node-uptime.dakshavalidator.in/dakshavalidator.png" />
+    <meta property="og:image" content="https://media-node-uptime.dakshavalidator.in/uptime-tracker.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@dakshavalidator" />
-    <meta name="twitter:image" content="https://media-node-uptime.dakshavalidator.in/dakshavalidator.png" />
+    <meta name="twitter:image" content="https://media-node-uptime.dakshavalidator.in/uptime-tracker.png" />
     <link rel="canonical" href="/" />
   </head>
 
